@@ -1,0 +1,11 @@
+Implementation of the 'viridis' - the default -, 'magma', 'plasma',
+'inferno', and 'cividis' color maps for 'R'. 'viridis', 'magma',
+'plasma', and 'inferno' are ported from 'matplotlib'
+<http://matplotlib.org/>, a popular plotting library for 'python'.
+'cividis', was developed by Jamie R. Nu<c3><b1>ez and Sean M. Colby.
+These color maps are designed in such a way that they will
+analytically be perfectly perceptually-uniform, both in regular form
+and also when converted to black-and-white. They are also designed to
+be perceived by readers with the most common form of color blindness
+(all color maps in this package) and color vision deficiency
+('cividis' only).
