@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3098 2019/07/31 12:59:05 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3099 2019/07/31 13:01:17 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5055,3 +5055,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated audio/opusfile to 0.11 [nia 2019-07-31]
 	Updated games/openttd to 1.9.2 [nia 2019-07-31]
 	Added graphics/R-effects version 4.1.1 [brook 2019-07-31]
+	Added graphics/R-viridis version 0.5.1 [brook 2019-07-31]
